# endless-practice

./: .gitignore  CMakeLists.txt
opencv_assignment/: task2_grayscale  task3_black_bg  task4_RGB  task5_text_contours  task6_rotate
opencv_assignment/cpp/: CMakeLists.txt  task2_grayscale.cpp  task3_black_bg.cpp  task4_RGB.cpp  task5_text_contours.cpp  task6_rotate.cpp
opencv_assignment/python/: task2_grayscale.py  task3_black_bg.py  task4_RGB.py  task5_text_contours.py  task6_rotate.py
script/task1/: task1.py
script/task2/: task2.py
script/task3/: task3.py
script/task4/: task.py
script/task5/: task5.py
script/task7/: task7.py
src/task1/: CMakeLists.txt  task1.cpp
src/task2/: CMakeLists.txt  task2.cpp
src/task3/: CMakeLists.txt  task3.cpp
src/task4/: CMakeLists.txt  task4.cpp
src/task5/: CMakeLists.txt  task5.cpp
src/task6/: CMakeLists.txt  task6.cpp
src/task7/: CMakeLists.txt  main.cpp
